# conductor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SECURITY.md  conductor.yaml  docker-compose.yml  pyproject.toml  server.py
conductor/: __init__.py  auth.py  circuit.py  cli.py  config.py  dispatch.py  events.py  logging.py  mcp_tools.py  metrics.py  models.py  policy.py  server.py  storage.py
docs/: api.md  architecture.md  composer-e2e.md  composer-llm.md  composer.md  conductor-vs-agents-gateway.md  deployment.md  gateway-hub.md  live-e2e.md  planner.md  runbooks.md
scripts/: e2e-composer-live.sh  e2e-composer-local.sh  e2e-live-agents.sh  e2e-live-gateway-hub.sh  e2e-local-gateway-hub.sh  e2e-local.sh
tests/: test_agents_gateway_client.py  test_api_integration.py  test_auth.py  test_capability_validation.py  test_circuit.py  test_cli.py  test_composer_context.py  test_composer_e2e.py  test_composer_evidence_recovery.py  test_composer_http_api.py  test_composer_integration_task.py  test_composer_interactions.py  test_composer_llm.py  test_composer_mcp_tools.py  test_composer_models.py  test_composer_planner.py  test_composer_production_contract.py  test_composer_reports.py  test_composer_scheduler.py  test_composer_storage.py  test_composer_supervisor.py  test_config.py  test_dispatch.py  test_e2e_prerequisite_blocks.sh  test_endpoints.py  test_gateway_capabilities.py  test_gateway_health.py  test_gateway_http_api.py  test_gateway_mcp_tools.py  test_gateway_registry.py  test_logging.py  test_mcp_auth.py  test_mcp_gateway_client.py  (+8 more)
(+29 files in other folders)
