[project]
name = "astatide-conductor"
version = "0.1.0"
description = "Persistent objective/task-graph orchestrator for MCP-driven agent workflows"
requires-python = ">=3.12"
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "fastmcp>=2.0,<3",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.0,<3",
    "python-dotenv>=1.0,<2",
    "typer>=0.12,<1",
    "httpx>=0.27,<1",
    "pyyaml>=6.0,<7",
    "pyjwt[crypto]>=2.8,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.27,<1",
    "respx>=0.23.1",
]

[project.scripts]
conductor = "conductor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["conductor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"